# mcp-context-forge

./: .bumpversion.cfg  .coveragerc  .darglint  .dockerignore  .editorconfig  .env.ce.example  .env.example  .env.make  .eslintrc.json  .flake8  .gitattributes  .gitignore  .hadolint.yaml  .htmlhintrc  .interrogaterc  .isort.cfg  .jshintrc  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prospector.yaml  .pycodestyle  .pylintrc  .pyspelling.yml  .ruff.toml  .snyk  .spellcheck-en.txt  .travis.yml  .whitesource  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Containerfile.lite  DEVELOPING.md  MANIFEST.in  METRICS_IMPROVEMENTS_SUMMARY.md  MIGRATION-0.7.0.md  (+39 more)
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: .renovate.json5  CODEOWNERS  codeql-config.yml  pull_request_template.md
agent_runtimes/langchain_agent/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  PROVIDERS.md  README.md  __init__.py  agent_langchain.py  app.py  config.py  demo.py  mcp_client.py  models.py  pyproject.toml  requirements.txt  start_agent.py  test_agent.sh
agent_runtimes/langchain_agent/examples/: anthropic.env  aws-bedrock.env  azure-openai.env  ollama.env
agent_runtimes/langchain_agent/tests/: __init__.py  conftest.py  test_app.py  test_config.py
alembic/: README  README.md  env.py
async_testing/: async_validator.py  benchmarks.py  config.yaml  monitor_runner.py  profile_compare.py  profiler.py
charts/: README.md
deployment/: CHARTS.md  README.md
docker/: translate.Dockerfile
docs/: .gitignore  Makefile  base.yml  create.sh  issue_699_report.md  mkdocs.yml  oauth-setup.md  requirements.txt  translate.md
examples/: reverse-proxy-config.yaml
k8s/: mcp-context-forge-deployment.yaml  mcp-context-forge-service.yaml  postgres-deployment.yaml
llms/: api.md  helm.md  mcp-server-go.md  mcp-server-python.md  mcpgateway.md  mkdocs.md  plugins-llms.md  testing.md
mcp-servers/: scaffold-go-server.sh  scaffold-python-server.sh
mcp-servers/python/data_analysis_server/: Containerfile  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
mcp-servers/python/data_analysis_server/examples/: README.md  comprehensive_workflow_example.py  data_transformation_example.py  query_operations_example.py  sales_analysis.py  statistical_analysis_example.py  time_series_example.py  visualization_showcase_example.py
mcp-servers/python/data_analysis_server/sample_data/: customer_data.json  employee_data.csv  marketing_data.csv  retail_transactions.csv  sales_data.csv  stock_prices.csv
mcp-servers/python/data_analysis_server/src/data_analysis_server/: __init__.py  models.py  server.py
mcp-servers/python/data_analysis_server/src/data_analysis_server/core/: __init__.py  analyzer.py  data_loader.py  transformer.py
mcp-servers/python/data_analysis_server/src/data_analysis_server/statistics/: __init__.py  descriptive.py  hypothesis_tests.py  time_series.py
mcp-servers/python/data_analysis_server/src/data_analysis_server/storage/: __init__.py  dataset_manager.py
mcp-servers/python/data_analysis_server/src/data_analysis_server/utils/: query_parser.py
mcp-servers/python/data_analysis_server/src/data_analysis_server/visualization/: __init__.py  plots.py
mcp-servers/python/data_analysis_server/tests/: __init__.py  conftest.py  test_data_loader.py
mcp-servers/python/mcp_eval_server/: .env.example  CONFIGURATION_GUIDE.md  Containerfile  Makefile  README.md  docker-compose.yml  example-custom-models.yaml  pyproject.toml  test_all_providers.py  validate_models.py
mcp-servers/python/mcp_eval_server/custom-config/: judge_prompts.yaml  models.yaml
mcp-servers/python/mcp_eval_server/examples/: claude-4-1-bedrock.env  gemini.env  watsonx.env
mcp-servers/python/mcp_eval_server/mcp_eval_server/: __init__.py  health.py  hybrid_server.py  rest_server.py  server.py
mcp-servers/python/mcp_eval_server/mcp_eval_server/config/: __init__.py  benchmarks.yaml  models.yaml  rubrics.yaml
mcp-servers/python/mcp_eval_server/mcp_eval_server/evaluators/: __init__.py
mcp-servers/python/mcp_eval_server/mcp_eval_server/judges/: __init__.py  anthropic_judge.py  azure_judge.py  base_judge.py  bedrock_judge.py  gemini_judge.py  ollama_judge.py  openai_judge.py  rule_judge.py  watsonx_judge.py
mcp-servers/python/mcp_eval_server/mcp_eval_server/judges/templates/: evaluation.j2  pairwise.j2  reference.j2
mcp-servers/python/mcp_eval_server/mcp_eval_server/metrics/: __init__.py
mcp-servers/python/mcp_eval_server/mcp_eval_server/storage/: __init__.py  cache.py  results_store.py
mcp-servers/python/mcp_eval_server/mcp_eval_server/tools/: __init__.py  agent_tools.py  bias_tools.py  calibration_tools.py  judge_tools.py  multilingual_tools.py  performance_tools.py  privacy_tools.py  prompt_tools.py  quality_tools.py  rag_tools.py  robustness_tools.py  safety_tools.py  workflow_tools.py
mcp-servers/python/mcp_eval_server/mcp_eval_server/utils/: __init__.py
mcp-servers/python/mcp_eval_server/tests/: __init__.py  test_server.py
mcp-servers/python/pptx_server/: .env.example  .gitignore  Containerfile  INTEGRATION.md  Makefile  README.md  SECURITY.md  demo.py  enhanced_demo.py  pyproject.toml  secure_demo.py  security_test.py  test_http_download.py
mcp-servers/python/pptx_server/examples/templates/: corporate_template.pptx  new_16_9_template.pptx  simple_template.pptx  template.pptx  test_template.pptx  widescreen_template.pptx
mcp-servers/python/pptx_server/src/pptx_server/: __init__.py  combined_server.py  http_server.py  server.py
mcp-servers/python/pptx_server/tests/: test_server.py
mcpgateway/: __init__.py  admin.py  auth.py  bootstrap_db.py  cli.py  cli_export_import.py  config.py  db.py  main.py  models.py  observability.py  reverse_proxy.py  schemas.py  translate.py  types.py  validators.py  version.py  wrapper.py  wrapper2.py
mcpgateway-wrapper/: README.md  pyproject.toml
mcpgateway-wrapper/src/mcpgateway_wrapper/: __init__.py  server.py
(+761 files in other folders)
