[project]
name = "mcpgateway-wrapper"
version = "0.1.0"
description = "To use all the tools present in mcp gateway in any client supporting mcp. eg. Claude, Cline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.3.0",
    "pyjwt==2.10.1"
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcpgateway-wrapper = "mcpgateway_wrapper:main"
